<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <LinearLayout android:id="@+id/ll_main"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <!-- Order -->
        <LinearLayout
                android:id="@+id/ll_order"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/command_name"
                    android:textAllCaps="true"
                    android:textSize="20sp"/>

            <EditText
                    android:id="@+id/edt_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:hint="@string/command_enter_number"/>

        </LinearLayout>

        <!-- Landmark -->
        <LinearLayout
                android:id="@+id/ll_landmark"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/landmark"/>

            <Spinner
                    android:textSize="20sp"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_landmark"/>
        </LinearLayout>

        <!-- Result -->
        <LinearLayout
                android:textSize="20sp"
                android:id="@+id/ll_result"
                android:visibility="gone"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:id="@+id/tv_client"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:id="@+id/tv_description"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_alignEnd="@+id/ll_main"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_validation"
            android:text="@string/validate"
            android:textAllCaps="true"
            android:padding="16dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"/>

    <!-- Photos -->
    <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_below="@+id/ll_main"
            android:id="@+id/ll_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictures"
                android:textSize="20sp"
                android:textAllCaps="true"/>

        <LinearLayout
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_pic_list"/>

        <ImageView
                android:layout_marginStart="8dp"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/iv_add_pic"
                android:src="@drawable/ic_add_circle_black_24dp"/>
    </LinearLayout>

    <!-- Comment -->
    <LinearLayout
            android:layout_below="@+id/ll_pic"
            android:id="@+id/ll_comment"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textAllCaps="true"/>

        <EditText
                android:id="@+id/edt_comment"
                android:layout_margin="16dp"
                android:maxLines="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_add"/>

    </LinearLayout>


    <!-- Control -->
    <LinearLayout
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control_validation"/>

        <CheckBox
                android:layout_marginStart="16dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/cb_control"/>
    </LinearLayout>


    <!-- Save & Send -->
    <TextView
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="@android:color/holo_blue_light"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/tv_save_control"/>

</RelativeLayout>